@@ -7,5 +7,4 @@ UPDATE `settings` set `version` = '0.7';
 UPDATE `settings` set `donate` = '0';
 
 /* add show names */
-ALTER TABLE `settings` ADD `masterNames` tinyint(1) DEFAULT '0';
-ALTER TABLE `settings` ADD `slaveNames` tinyint(1) DEFAULT '0';
+ALTER TABLE `subnets` ADD `showName` tinyint(1) DEFAULT '0';
