@@ -10,14 +10,16 @@ $('table.subnets tr th').live("mouseover mouseout", function(event) {
 		$('img.rewind').attr("src","css/images/rewind.png");
 });
 //subnets img hover
+/*
 $('table.subnets tr[class!=th]').live("mouseover mouseout", function(event) {
 	if (event.type == 'mouseover') {
-		$(this).children('td').children('img').attr("src","css/images/expandHover.png");
+		$(this).children('td').children('img').attr("src","css/images/folderClosed.png");
 	}
 	else {	
-		$(this).children('td').children('img').attr("src","css/images/expand.png");
+		$(this).children('td').children('img').attr("src","css/images/folderClosed.png");
 	}
 });
+*/
 $('table.ipaddress_subnet tr.add_ipaddress').live("mouseover mouseout", function(event) {
 	if (event.type == 'mouseover') {
 		$('img.add_ipaddress').attr("src","css/images/addHover.png");
