@@ -7,6 +7,7 @@
 	----------------------------
 	+ Search results covering VLANs;
 	+ Custom IP fields ordering;
+	+ Show Subnet name instead of subnet IP address option;
 
 	Bugfixes:
 	------------------------
